# MixerXDemoPlayer

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE.txt
cmake/: library_SDLMixerX.cmake
resources/switch/: mixerx-logo.xcf
resources/wii/: icon.xcf  meta.xml.in
resources/wiiu/: icon.xcf  meta.xml.in  wuhb-splash.xcf
src/: playmus.c
src/fx/: spc_echo.cpp
